--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,21 +5,21 @@ const currentYear = new Date().getFullYear();
 
 <footer>
 	<div class="group">
-		<p>
+		<!-- <p>
 			Designed & Developed in Portland with <a href="https://astro.build/">Astro</a>
 			<Icon icon="rocket-launch" size="1.2em" />
-		</p>
+		</p> -->
 		<p>&copy; {currentYear} Edho Guntur</p>
 	</div>
-	<p class="socials">
+	<!-- <p class="socials">
 		<a href="https://twitter.com/me"> Twitter</a>
 		<a href="https://github.com/me"> GitHub</a>
 		<a href="https://codepen.io/me"> CodePen</a>
-	</p>
+	</p> -->
 </footer>
 <style>
 	footer {
-		display: flex;
+		/* display: flex; */
 		flex-direction: column;
 		gap: 3rem;
 		margin-top: auto;
@@ -43,8 +43,10 @@ const currentYear = new Date().getFullYear();
 
 	.group {
 		display: flex;
-		flex-direction: column;
+		/* flex-direction: column; */
 		gap: 0.5rem;
+		justify-content: center; /* Center horizontally */
+    	align-items: center; /* Center vertically */
 	}
 
 	.socials {
@@ -62,9 +64,11 @@ const currentYear = new Date().getFullYear();
 		}
 
 		.group {
-			flex-direction: row;
+			/* flex-direction: row; */
+			align-content: center;
 			gap: 1rem;
-			flex-wrap: wrap;
+			justify-content: center;
+			/* flex-wrap: wrap; */
 		}
 
 		.socials {
