--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,121 +1,175 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-import ContactCTA from '../components/ContactCTA.astro';
-import Hero from '../components/Hero.astro';
+import ContactCTA from "../components/ContactCTA.astro";
+import Hero from "../components/Hero.astro";
 ---
 
-<BaseLayout title="About | Edho Guntur" description="About Edho Guntur Lorem Ipsum">
-	<div class="stack gap-20">
-		<main class="wrapper about">
-			<Hero
-				title="About"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
-			>
-				<img
+<BaseLayout
+  title="About | Edho Guntur"
+  description="About Edho Guntur Lorem Ipsum"
+>
+  <div class="stack gap-20">
+    <main class="wrapper about">
+      <Hero
+        title="About"
+        tagline="Thanks for stopping by. Read below to learn more about myself"
+      >
+        <!-- <img
 					width="1553"
 					height="873"
 					src="/assets/at-work.jpg"
 					alt="Edho Guntur at work with a colleague"
-				/>
-			</Hero>
+				/> -->
+      </Hero>
 
-			<section>
-				<h2 class="section-title">Background</h2>
-				<div class="content">
-					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl
-						condimentum id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu
-						odio ut sem nulla pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum
-						dui faucibus in ornare.
-					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
-					</p>
-				</div>
-			</section>
-			<section>
+      <section>
+        <h2 class="section-title">Profile</h2>
+        <div class="content">
+          <p>
+            I'm an experienced professional with a diverse background, and I
+            started my career in March 2011. Over the years, I've become a
+            passionate Software Engineer, specializing in developing iOS apps
+            and Backend systems. I'm a highly motivated and energetic individual
+            known for my strong work ethic, quick learning, and consistently
+            positive attitude. I thrive in fast-paced work environments and am
+            recognized for my precision, assertiveness, and adaptability.
+          </p>
+          <p>
+            As a Software Engineer, I've sharpened my skills in creating
+            innovative software solutions. I have hands-on experience in
+            crafting engaging iOS applications and dependable Backend systems.
+            My ability to efficiently and accurately handle projects has helped
+            companies achieve their business goals.
+          </p>
+          <p>
+            Moreover, I'm driven to constantly self-improve and stay updated
+            with the latest developments in the tech industry. I firmly believe
+            that technology is a major driver of progress, and I'm dedicated to
+            contributing to the development of solutions that benefit society.
+          </p>
+        </div>
+      </section>
+      <!-- <section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
 					<p>Corporis voluptates tenetur laudantium.</p>
 				</div>
-			</section>
-			<section>
-				<h2 class="section-title">Skills</h2>
-				<div class="content">
-					<p>officia unde omnis</p>
-				</div>
-			</section>
-		</main>
+			</section> -->
+      <section>
+        <h2 class="section-title">Skills</h2>
+        <div class="content grid-container">
+          <h5>Programming Languages:</h5>
+          <ul>
+            <li>Golang</li>
+            <li>Typescript</li>
+            <li>C#</li>
+            <li>PHP</li>
+            <li>Swift</li>
+          </ul>
 
-		<ContactCTA />
-	</div>
+          <h5>Frameworks:</h5>
+          <ul>
+            <li>SwiftUI</li>
+            <li>SwiftData</li>
+            <li>.NET</li>
+            <li>Laravel</li>
+            <li>Express</li>
+          </ul>
+
+          <h5>Databases:</h5>
+          <ul>
+            <li>MySQL</li>
+            <li>PostgreSQL</li>
+            <li>MongoDB</li>
+            <li>MsSql</li>
+          </ul>
+
+          <h5>Tools:</h5>
+          <ul>
+            <li>Xcode</li>
+            <li>Visual Code</li>
+            <li>Visual Studio</li>
+            <li>Android Studio</li>
+          </ul>
+
+          <h5>Others:</h5>
+          <ul>
+            <li>Project Management</li>
+            <li>Administration</li>
+            <li>English & Japanese(N5)</li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <ContactCTA />
+  </div>
 </BaseLayout>
 
 <style>
-	.about {
-		display: flex;
-		flex-direction: column;
-		gap: 3.5rem;
-	}
+  .about {
+    display: flex;
+    flex-direction: column;
+    gap: 3.5rem;
+  }
 
-	img {
-		margin-top: 1.5rem;
-		border-radius: 1.5rem;
-		box-shadow: var(--shadow-md);
-	}
+  img {
+    margin-top: 1.5rem;
+    border-radius: 1.5rem;
+    box-shadow: var(--shadow-md);
+  }
 
-	section {
-		display: flex;
-		flex-direction: column;
-		gap: 0.5rem;
-		color: var(--gray-200);
-	}
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    color: var(--gray-200);
+  }
 
-	.section-title {
-		grid-column-start: 1;
-		font-size: var(--text-xl);
-		color: var(--gray-0);
-	}
+  .section-title {
+    grid-column-start: 1;
+    font-size: var(--text-xl);
+    color: var(--gray-0);
+  }
 
-	.content {
-		grid-column: 2 / 4;
-	}
+  .content {
+    grid-column: 2 / 4;
+  }
 
-	.content :global(a) {
-		text-decoration: 1px solid underline transparent;
-		text-underline-offset: 0.25em;
-		transition: text-decoration-color var(--theme-transition);
-	}
+  .content :global(a) {
+    text-decoration: 1px solid underline transparent;
+    text-underline-offset: 0.25em;
+    transition: text-decoration-color var(--theme-transition);
+  }
 
-	.content :global(a:hover),
-	.content :global(a:focus) {
-		text-decoration-color: currentColor;
-	}
+  .content :global(a:hover),
+  .content :global(a:focus) {
+    text-decoration-color: currentColor;
+  }
 
-	@media (min-width: 50em) {
-		.about {
-			display: grid;
-			grid-template-columns: 1fr 60% 1fr;
-		}
+  @media (min-width: 50em) {
+    .about {
+      display: grid;
+      grid-template-columns: 1fr 60% 1fr;
+    }
 
-		.about > :global(:first-child) {
-			grid-column-start: 2;
-		}
+    .about > :global(:first-child) {
+      grid-column-start: 2;
+    }
 
-		section {
-			display: contents;
-			font-size: var(--text-lg);
-		}
-	}
+    section {
+      display: contents;
+      font-size: var(--text-lg);
+    }
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    max-width: 100%;
+    list-style: none;
+    padding: 0;
+  }
 </style>
