--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,16 +1,18 @@
 ---
 interface Props {
 	title: string;
+	subtitle: string;
 	tagline?: string;
 	align?: 'start' | 'center';
 }
 
-const { align = 'center', tagline, title } = Astro.props;
+const { align = 'center', tagline, title, subtitle } = Astro.props;
 ---
 
 <div class:list={['hero stack gap-4', align]}>
 	<div class="stack gap-2">
 		<h1 class="title">{title}</h1>
+		<h3>{subtitle}</h3>
 		{tagline && <p class="tagline">{tagline}</p>}
 	</div>
 	<slot />
