--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -21,6 +21,7 @@ const projects = (await getCollection('work')).sort(
 		<main class="wrapper stack gap-8">
 			<Hero
 				title="My Work"
+				subtitle=''
 				tagline="See my most recent projects below to get an idea of my past experience."
 				align="start"
 			/>
