Make subtitle on Hero is nullable

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
 	title: string;
-	subtitle: string;
+	subtitle?: string;
 	tagline?: string;
 	align?: 'start' | 'center';
 }
