Update skills informations

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,62 +1,88 @@
 ---
-import Icon from './Icon.astro';
+import Icon from "./Icon.astro";
 ---
 
 <section class="box skills">
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
-	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
-	</div>
+  <div class="stack gap-2 lg:gap-4">
+    <Icon
+      icon="apple-logo"
+      color="var(--accent-regular)"
+      size="2.5rem"
+      gradient
+    />
+    <h4>iOS Development</h4>
+    <p>
+      Specializing in iOS app development, I'm dedicated to transforming
+      creative iOS concepts into digital realities. With a keen eye for design
+      and a deep understanding of user experience, I craft user-friendly and
+      visually appealing applications that stand out in the App Store.
+    </p>
+  </div>
+  <div class="stack gap-2 lg:gap-4">
+    <Icon icon="code" color="var(--accent-regular)" size="2.5rem" gradient />
+    <h4>Backend Engineering</h4>
+    <p>
+      As a skilled backend engineer, I turn concepts into efficient and scalable
+      backend solutions. With expertise in database design, server architecture,
+      and API development, I ensure that your application runs smoothly,
+      handling data securely and efficiently.
+    </p>
+  </div>
+  <div class="stack gap-2 lg:gap-4">
+    <Icon
+      icon="trophy"
+      color="var(--accent-regular)"
+      size="2.5rem"
+      gradient
+    />
+    <h4>Freelance Services</h4>
+    <p>
+      Offering freelance services to clients worldwide, I provide top-notch
+      development solutions tailored to your unique needs. Whether you need a
+      full-stack development partner or a specific project completed, I'm here
+      to bring your ideas to life with precision and dedication.
+    </p>
+  </div>
 </section>
 
 <style>
-	.box {
-		border: 1px solid var(--gray-800);
-		border-radius: 0.75rem;
-		padding: 1.5rem;
-		background-color: var(--gray-999_40);
-		box-shadow: var(--shadow-sm);
-	}
+  .box {
+    border: 1px solid var(--gray-800);
+    border-radius: 0.75rem;
+    padding: 1rem;
+    background-color: var(--gray-999_40);
+    box-shadow: var(--shadow-sm);
+  }
 
-	.skills {
-		display: flex;
-		flex-direction: column;
-		gap: 3rem;
-	}
+  .skills {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
 
-	.skills h2 {
-		font-size: var(--text-lg);
-	}
+  .skills h2 {
+    font-size: var(--text-lg);
+  }
 
-	.skills p {
-		color: var(--gray-400);
-	}
+  .skills p {
+    color: var(--gray-400);
+	text-align: justify;
+  }
 
-	@media (min-width: 50em) {
-		.box {
-			border-radius: 1.5rem;
-			padding: 2.5rem;
-		}
+  @media (min-width: 50em) {
+    .box {
+      border-radius: 1.5rem;
+      padding: 2.5rem;
+    }
 
-		.skills {
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-			gap: 5rem;
-		}
+    .skills {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 2rem;
+    }
 
-		.skills h2 {
-			font-size: var(--text-2xl);
-		}
-	}
+    .skills h2 {
+      font-size: var(--text-2xl);
+    }
+  }
 </style>
