fixing text and color update

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -134,6 +134,10 @@ import Pill from "../components/Pill.astro";
     grid-column: 2 / 4;
   }
 
+  .content p {
+    text-align: justify;
+  }
+
   .content :global(a) {
     text-decoration: 1px solid underline transparent;
     text-underline-offset: 0.25em;
