--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const projects = (await getCollection('work'))
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Selected Work</h3>
-					<h4 style="color: yellow">(Will Update Soon)</h4>
+					<h4 style="color: green">(Will Update Soon)</h4>
 					<p>Take a look below at some of my featured work for clients from the past few years.</p>
 				</header>
 
