--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -24,7 +24,7 @@ const projects = (await getCollection('work')).sort(
 				tagline="See my most recent projects below to get an idea of my past experience."
 				align="start"
 			/>
-			<h4 style="color: yellow">(Will Update Soon)</h4>
+			<h4 style="color: green">(Will Update Soon)</h4>
 			<Grid variant="offset">
 				{
 					projects.map((project) => (
