resize footer text size

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ const currentYear = new Date().getFullYear();
 		padding: 3rem 2rem 3rem;
 		text-align: center;
 		color: var(--gray-400);
-		font-size: var(--text-sm);
+		font-size: var(--text-lg);
 	}
 
 	footer a {
@@ -47,6 +47,7 @@ const currentYear = new Date().getFullYear();
 		gap: 0.5rem;
 		justify-content: center; /* Center horizontally */
     	align-items: center; /* Center vertically */
+
 	}
 
 	.socials {
