--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -81,7 +81,7 @@ import Pill from "../components/Pill.astro";
           <div class="skills">
             <Pill><Icon icon="app-store-logo" size="1.33em" /> Xcode ⭐</Pill>
             <Pill>VScode</Pill>
-            <Pill>Visual Studio</Pill>
+            <Pill>Docker</Pill>
           </div>
           <h5>Database:</h5>
           <div class="skills">
