--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -128,6 +128,7 @@ import Pill from "../components/Pill.astro";
     grid-column-start: 1;
     font-size: var(--text-xl);
     color: var(--gray-0);
+    text-align: right;
   }
 
   .content {
