stylish pill and update profile

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,13 +29,17 @@ import Pill from "../components/Pill.astro";
         <h2 class="section-title">Profile</h2>
         <div class="content">
           <p>
-            I'm an experienced professional with a diverse background, and I
-            started my career in March 2011. Over the years, I've become a
-            passionate Software Engineer, specializing in developing iOS apps
-            and Backend systems. I'm a highly motivated and energetic individual
-            known for my strong work ethic, quick learning, and consistently
-            positive attitude. I thrive in fast-paced work environments and am
-            recognized for my precision, assertiveness, and adaptability.
+            I'm an experienced professional with a diverse background. I started
+            my career in March 2011 and currently working in <a
+              href="https://miraisolusi.com/"
+              target="_blank"
+              rel="noopener noreferrer">Mirai Digital Solusi</a
+            > as Backend Engineer. Over the years, I've become a passionate
+            Software Engineer, specializing in developing iOS apps and Backend
+            systems. I'm a highly motivated and energetic individual known for
+            my strong work ethic, quick learning, and consistently positive
+            attitude. I thrive in fast-paced work environments and am recognized
+            for my precision, assertiveness, and adaptability.
           </p>
           <p>
             As a Software Engineer, I've sharpened my skills in creating
@@ -173,7 +177,7 @@ import Pill from "../components/Pill.astro";
 
   .skills {
     display: flex;
-    flex-flow: row wrap;
-    padding: 5px;
+    flex-wrap: wrap;
+    row-gap: 0.2rem;
   }
 </style>
