--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,8 @@ const projects = (await getCollection('work'))
 
 	.roles {
 		display: flex;
-		flex-flow: row wrap;
+		flex-wrap: wrap;
+		row-gap: 0.2rem;
 	}
 
 	.hero img {
