column gap on pill

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -179,5 +179,6 @@ import Pill from "../components/Pill.astro";
     display: flex;
     flex-wrap: wrap;
     row-gap: 0.2rem;
+    column-gap: 0.2rem;
   }
 </style>
