--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,6 +121,7 @@ const projects = (await getCollection('work'))
 		display: flex;
 		flex-wrap: wrap;
 		row-gap: 0.2rem;
+		column-gap: 0.2rem;
 	}
 
 	.hero img {
