--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const projects = (await getCollection('work'))
 				<Hero
 					title="Hello👋, I'm Edho"
 					subtitle='iOS Developer | Backend Engineer | Freelancer'
-					tagline="A Creative iOS and Backend Alchemist who is currently based in Indonesia. Transforming Ideas into Digital Realities, One Journey at a Time. "
+					tagline="A Creative iOS and Backend Developer who is currently based in Indonesia. Transforming Ideas into Digital Realities, One Journey at a Time. "
 					align="start"
 				>
 					<div class="roles">
