--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const projects = (await getCollection('work'))
 						<Pill><Icon icon="app-store-logo" size="1.33em" />iOS Developer</Pill>
 						<Pill><Icon icon="code" size="1.33em" />Backend Developer</Pill>
 						<Pill><Icon icon="airplane-tilt" size="1.33em" />Traveller</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Japanese Learner</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" />日本語 Learner 🇯🇵</Pill>
 					</div>
 				</Hero>
 
